testsuite/tests/checks/blocks/test.out
blocks.adb:6:7: error: Blocks - rule violation
6 |       declare
  |       ^^^^ 

